create documents types and add documents for employes
